--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
+<!doctype html>
 <html>
- <body>
-  
-  <div>
-   <ul>
-    <li>bricks</li>
-	<li>mortar</li>
-	<li>sand</li>
-	<li></li>
-	<li></li>
-   </ul>
-  </div>  
- </body>
+	<head>
+    	<meta charset="utf-8">
+        <title>FluxHud</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/misc/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/theme/fluxhud-styles.css">
+        <link rel="stylesheet" type="text/css" href="assets/typefaces/typeface-css/font-awesome.min.css">
+        <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300,400" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+        <link rel="icon" href="assets/images/basic-images/favicon.ico" type="image/x-icon" />
+    </head>
+    <body>
+    	<div class="header-container">
+        	<header>
+            	<div class="uni-container">
+                    <div class="btn github-btn fl-r"><a href="https://github.com/fluxxy/fluxhud"><i class="icon-github"></i> <br> View on Github</a></div>
+                    <div class="btn download-btn fl-r"><a href="https://github.com/fluxxy/fluxhud/archive/master.zip"><i class="icon-download-alt"></i> <br> Download HUD</a></div>
+                    <div class="btn tftv-btn fl-r"><a href="http://teamfortress.tv/forum/thread/10935-fluxhud"><i class="icon-globe"></i> <br> View TFTV Thread</a></div>
+                    <div class="btn ss-btn fl-r"><a href="http://imgur.com/a/2lbZr"><i class="icon-camera"></i> <br> View Screenshots</a></div>
+                </div>
+            </header>
+        </div>
+        <div class="jumbo-box">
+        	<div class="uni-container">
+            	<h1>FLUX HUD</h1>
+                <div class="logo-container">
+                    <div class="logo-hud">
+                    	<a href="http://steamcommunity.com/id/arronsparrow//"><img src="assets/images/tf2-images/2-9.png" alt="Steam Profile Link"></a>
+                    </div>
+            	</div>
+                <div class="steam-p-text">
+                	<p>STEAM PROFILE</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
