--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     	<div class="header-container">
         	<header>
             	<div class="uni-container">
-                    <div class="btn github-btn fl-r"><a href="https://github.com/fluxxy/fluxhud"><i class="icon-github"></i> <br> View on Github</a></div>
-                    <div class="btn download-btn fl-r"><a href="https://github.com/fluxxy/fluxhud/archive/master.zip"><i class="icon-download-alt"></i> <br> Download HUD</a></div>
-                    <div class="btn tftv-btn fl-r"><a href="http://teamfortress.tv/forum/thread/10935-fluxhud"><i class="icon-globe"></i> <br> View TFTV Thread</a></div>
-                    <div class="btn ss-btn fl-r"><a href="http://imgur.com/a/2lbZr"><i class="icon-camera"></i> <br> View Screenshots</a></div>
+                    <div class="btn github-btn fl-r"><a href="https://github.com/"><i class="icon-github"></i> <br> View on Github</a></div>
+                    <div class="btn download-btn fl-r"><a href="https://github.com/"><i class="icon-download-alt"></i> <br> Download HUD</a></div>
+                    <div class="btn tftv-btn fl-r"><a href="http://teamfortress.tv/"><i class="icon-globe"></i> <br> View TFTV Thread</a></div>
+                    <div class="btn ss-btn fl-r"><a href="http://imgur.com/"><i class="icon-camera"></i> <br> View Screenshots</a></div>
                 </div>
             </header>
         </div>
@@ -26,7 +26,7 @@
             	<h1>FLUX HUD</h1>
                 <div class="logo-container">
                     <div class="logo-hud">
-                    	<a href="http://steamcommunity.com/id/arronsparrow//"><img src="assets/images/tf2-images/2-9.png" alt="Steam Profile Link"></a>
+                    	<a href="http://steamcommunity.com/id/arronsparrow/"><img src="assets/aperture.png" alt="Steam Profile Link"></a>
                     </div>
             	</div>
                 <div class="steam-p-text">
