revised index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
     	<meta charset="utf-8">
-        <title>FluxHud</title>
+        <title>TestPage</title>
         <link rel="stylesheet" type="text/css" href="assets/css/misc/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/theme/fluxhud-styles.css">
         <link rel="stylesheet" type="text/css" href="assets/typefaces/typeface-css/font-awesome.min.css">
