--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="jumbo-box">
         	<div class="uni-container">
-            	<h1>FLUX HUD</h1>
+            	<h1>PR HUB</h1>
                 <div class="logo-container">
                     <div class="logo-hud">
                     	<a href="http://steamcommunity.com/id/arronsparrow/"><img src="assets/aperture.png" alt="Steam Profile Link"></a>
