--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     	<div class="header-container">
         	<header>
             	<div class="uni-container">
-                    <div class="btn github-btn fl-r"><a href="https://github.com/"><i class="icon-github"></i> <br> View on Github</a></div>
+                    <div class="btn github-btn fl-r"><a href="https://github.com/arronsparrow/newGiTtest"><i class="icon-github"></i> <br> View on Github</a></div>
                     <div class="btn download-btn fl-r"><a href="https://github.com/"><i class="icon-download-alt"></i> <br> Download HUD</a></div>
-                    <div class="btn tftv-btn fl-r"><a href="http://teamfortress.tv/"><i class="icon-globe"></i> <br> View TFTV Thread</a></div>
+                    <div class="btn tftv-btn fl-r"><a href="http://www.schooltube.com/channel/roadrunner//"><i class="icon-globe"></i> <br> View Roadrunner Report</a></div>
                     <div class="btn ss-btn fl-r"><a href="http://imgur.com/"><i class="icon-camera"></i> <br> View Screenshots</a></div>
                 </div>
             </header>
         </div>
         <div class="jumbo-box">
         	<div class="uni-container">
-            	<h1>PR HUB</h1>
+            	<h1>Prescott Roadrunners HUB</h1>
                 <div class="logo-container">
                     <div class="logo-hud">
                     	<a href="http://steamcommunity.com/id/arronsparrow/"><img src="assets/aperture.png" alt="Steam Profile Link"></a>
                     </div>
             	</div>
                 <div class="steam-p-text">
-                	<p>STEAM PROFILE</p>
+                	<p>AUTHOR PROFILE</p>
                 </div>
             </div>
         </div>
